bug 45486 fixing percent colspans iterate over from the inner to the outer colspan cleanup in header files, some documentation, removing cruft bug 55694 use reflowstate.availwidth if is usefull r=karnaze sr=attinasi